<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filter_all"
        android:title="@string/filter_all" />

    <item
        android:id="@+id/filter_active"
        android:title="@string/filter_active" />

    <item
        android:id="@+id/filter_completed"
        android:title="@string/filter_completed" />

    <item
        android:id="@+id/filter_high_priority"
        android:title="@string/filter_high_priority" />

    <item
        android:id="@+id/filter_medium_priority"
        android:title="@string/filter_medium_priority" />

    <item
        android:id="@+id/filter_low_priority"
        android:title="@string/filter_low_priority" />

    <item
        android:id="@+id/filter_with_deadline"
        android:title="@string/filter_with_deadline" />

    <item
        android:id="@+id/filter_overdue"
        android:title="@string/filter_overdue" />

</menu>
